--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11672,148 +11672,6 @@ body {
   background-size: cover;
 }
 
-.text-ordina {
-  padding: 30px 0 15px;
-  text-align: justify;
-  margin-left: 15px;
-  font-weight: 600;
-  font-size: 45px;
-  color: #000;
-}
-
-#products {
-  width: 100%;
-  padding: 80px 0;
-  display: flex;
-  flex-direction: row;
-}
-
-#products .container2 {
-  width: 80%;
-  height: 500px;
-  margin: 0 auto;
-  overflow-y: scroll;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-#products .container2 #product-items {
-  width: 100%;
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  margin-left: 30px;
-  margin: 0 auto;
-}
-
-#products .container2 .contenitore-piatti-img {
-  width: calc(100% / 2 - 20px);
-  background: white;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  padding: 5px;
-  margin-bottom: 20px;
-  margin-left: 5px;
-  border-radius: 10px;
-  border: 3px solid lightgrey;
-  box-shadow: 3px 3px 3px grey;
-}
-
-@media screen and (max-width: 520px) {
-  #products .container2 .contenitore-piatti-img {
-    width: 80%;
-    margin: auto;
-    margin-bottom: 20px;
-  }
-}
-
-#products .container2 .contenitore-piatti-img .img-container {
-  width: 100%;
-  height: 200px;
-  display: flex;
-  flex-direction: row;
-  margin: 0 auto;
-  padding: 3px;
-}
-
-#products .container2 .card-piatti {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  height: 200px;
-  margin-top: 20px;
-  padding-bottom: 10px;
-}
-
-#products .container2 .card-piatti h5 {
-  font-size: 25px;
-  text-align: center;
-  font-weight: 400;
-  text-transform: capitalize;
-}
-
-@media screen and (max-width: 768px) {
-  #products .container2 .card-piatti h5 {
-    font-size: 20px;
-  }
-}
-
-#products .container2 .card-piatti .card-text {
-  text-align: center;
-  font-size: 15px;
-  text-transform: capitalize;
-}
-
-#products .container2 .card-piatti .card-text ul {
-  text-decoration: none;
-}
-
-#products .container2 .card-piatti .prezzo-card {
-  font-size: 20px;
-  text-align: center;
-  margin-top: 30px;
-  padding-left: 5px;
-}
-
-#products .container2 .card-piatti .contenitore-btn-aggiungi {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-}
-
-#products .container2 .card-piatti .contenitore-btn-aggiungi .btn-aggiungi {
-  width: 100px;
-  padding: 5px;
-  border-radius: 15px;
-  background-color: #00c79c;
-  font-size: 15px;
-  color: white;
-}
-
-#products .container2 .card-piatti .contenitore-btn-aggiungi .btn-aggiungi:hover {
-  color: black;
-  transition: all 0.2s ease-in-out;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  #products .container2 .card-piatti .contenitore-btn-aggiungi .btn-aggiungi:hover {
-    transition: none;
-  }
-}
-
-@media screen and (max-width: 920px) {
-  #products {
-    flex-direction: column;
-  }
-}
-
-.prezzo-totale {
-  text-align: center;
-  font-weight: bold;
-}
-
 #carte {
   width: 80%;
   background-color: #e1f8f3;
@@ -11864,6 +11722,138 @@ body {
   #carte .contenitore-sezione .testo {
     padding: 50px 0;
   }
+}
+
+.single-item {
+  display: inline-block;
+  vertical-align: middle;
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px #f7f1f1;
+  position: relative;
+  transition-duration: 0.3s;
+  transition-property: transform;
+  cursor: pointer;
+}
+
+.single-item:before {
+  pointer-events: none;
+  position: absolute;
+  z-index: -1;
+  content: "";
+  top: 100%;
+  left: 5%;
+  height: 10px;
+  width: 90%;
+  opacity: 0;
+  background: radial-gradient(ellipse at center, rgba(248, 248, 248, 0.35) 0%, rgba(247, 244, 244, 0) 80%);
+  transition-duration: 0.3s;
+  transition-property: transform, opacity;
+}
+
+.single-item:hover,
+.single-item:focus,
+.single-item:active {
+  transform: translateY(-5px);
+  /* move the element up by 5px */
+}
+
+.single-item:hover:before,
+.single-item:focus:before,
+.single-item:active:before {
+  opacity: 1;
+  transform: translateY(5px);
+  /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
+}
+
+.img-container {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.img-container img {
+  width: 100%;
+}
+
+/* Grow Shadow */
+
+.img-container {
+  display: inline-block;
+  vertical-align: middle;
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  transition-duration: 0.3s;
+  transition-property: box-shadow, transform;
+}
+
+.img-container:hover,
+.product-img:focus,
+.product-img:active {
+  box-shadow: 1px 0px 1px 4px rgba(247, 243, 243, 0.932);
+  transform: scale(1.1);
+}
+
+.card-body .contenitore-btn-aggiungi {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.card-body .contenitore-btn-aggiungi .btn-aggiungi {
+  width: 100px;
+  padding: 5px;
+  border-radius: 15px;
+  background-color: #00c79c;
+  font-size: 15px;
+  color: white;
+}
+
+.card-body .contenitore-btn-aggiungi .btn-aggiungi:hover {
+  color: black;
+  transition: all 0.2s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .card-body .contenitore-btn-aggiungi .btn-aggiungi:hover {
+    transition: none;
+  }
+}
+
+.card-body .card-text {
+  text-align: center;
+  font-size: 15px;
+  text-transform: capitalize;
+}
+
+.card-body .card-text ul {
+  text-decoration: none;
+}
+
+.card-body .card-text h5 {
+  font-size: 25px;
+  text-align: center;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+
+@media screen and (max-width: 768px) {
+  .card-body .card-text h5 {
+    font-size: 20px;
+  }
+}
+
+.prezzo-totale {
+  text-align: center;
+  font-weight: bold;
+}
+
+.text-ordina {
+  padding: 30px 0 15px;
+  text-align: justify;
+  margin-left: 15px;
+  font-weight: 600;
+  font-size: 45px;
+  color: #000;
 }
 
 #about-sec {
@@ -12049,7 +12039,7 @@ body {
 }
 
 #carr {
-  background-color: white;
+  background-color: #ffbf00;
   display: flex;
   flex-direction: column;
   align-items: center;
