--- a/resources/sass/partials/_carrello.scss
+++ b/resources/sass/partials/_carrello.scss
@@ -9,7 +9,7 @@ color: #fff;
 }
 
 #carr{
-    background-color: white;
+    background-color:#ffbf00;
     display:flex;
     flex-direction:column;
     align-items:center; 
