--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -14,12 +14,7 @@ body{
   .title-color{
     color:#fff;
   }
-  // .btn-color{
-  //   background: #000;
-  //   color:#fff;
-  //   &:hover{
-  //     color:gray;
-  //   }
+
   }
   .slide-btn{
     display: inline-block;
@@ -70,165 +65,9 @@ body{
   url('https://businessmirror.com.ph/wp-content/uploads/2020/06/Dont-miss-all-food-you-love-order-now-at-foodpanda-.jpg');
   background-size:cover;
 }
+
 // sezione profili e info ristorante
-// sezione piatti e tipologie
-.text-ordina{
-  padding: 30px 0 15px;
-  text-align:justify;
-  margin-left:15px;
-  font-weight: 600;
-  font-size: 45px;
-  color: #000;
-}
-#products{
-  width:100%;
-  padding: 80px 0;
-  display:flex;
-  flex-direction: row;
- // flex-wrap:nowrap;
-    .container2{
-    // background-color:orange;
-    width:80%;
-    height:500px;
-    margin: 0 auto;
-    overflow-y:scroll;
-    // scrollbar-width: none; //firefox
-    // ::-webkit-scrollbar {
-    //   display: none;  // Safari and Chrome
-    // }
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    #product-items{
-      //background: black;
-      width:100%;
-      padding:20px;
-      display:flex;
-      justify-content: space-between;
-      margin-left:30px;
-      margin:0 auto;
-    }
-
-    .contenitore-piatti-img{
-      width:calc(100% / 2 - 20px);
-      background:white;
-      display:flex;
-      justify-content:center;
-      flex-direction:column;
-      padding:5px;
-      margin-bottom: 20px;
-      margin-left:5px;
-      border-radius:10px;
-      border:3px solid lightgrey;
-      box-shadow: 3px 3px 3px grey;
-      @media screen and(max-width:520px) {
-        width: 80%;
-        margin: auto;
-        margin-bottom: 20px;
-      }
-      .img-container{
-        //background-color:red;
-        width:100%;
-        height:200px;
-        display:flex;
-        flex-direction: row;
-        margin:0 auto;
-        padding:3px;
-        // position: relative;
-        // overflow: hidden;
-        // cursor: pointer;
-        // display: inline-block;
-        // vertical-align: middle;
-        // -webkit-transform: perspective(1px) translateZ(0);
-        // transform: perspective(1px) translateZ(0);
-        // box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-        // -webkit-transition-duration: 0.3s;
-        // transition-duration: 0.3s;
-        // -webkit-transition-property: box-shadow, transform;
-        // transition-property: box-shadow, transform;
-        // &:hover{
-        //   box-shadow: 1px 0px 1px 4px rgba(247, 243, 243, 0.932);
-        //   -webkit-transform: scale(1.1);
-        //   transform: scale(1.1);
-        // }
-        // img{
-        //   width:100%;
-        //   margin:0 auto;
-        // }
-        // .product-img{
-        //   &:focus,
-        //   &:active{
-        //     box-shadow: 1px 0px 1px 4px rgba(247, 243, 243, 0.932);
-        //     -webkit-transform: scale(1.1);
-        //     transform: scale(1.1);
-        //   }
-        // }
-      }
-    }
-      .card-piatti{
-        width:100%;
-        //background:pink;
-        display:flex;
-        flex-direction:column;
-        height: 200px;
-        margin-top:20px;
-        padding-bottom:10px;
-        h5{
-          font-size:25px;
-          text-align:center;
-          font-weight: 400;
-          text-transform:capitalize;
-          @media screen and (max-width: 768px){
-            font-size: 20px;
-          }
-        }
-        .card-text{
-          text-align:center;
-          font-size:15px;
-          text-transform:capitalize;
-          ul{
-            text-decoration: none;
-          }
-        }
-        .prezzo-card{
-          font-size:20px;
-         text-align:center;
-          margin-top:30px;
-          padding-left:5px;
-        }
-        .contenitore-btn-aggiungi{
-            display:flex;
-            justify-content:center;
-            padding:10px;
-          .btn-aggiungi{
-            width:100px;
-            padding:5px;
-            border-radius:15px;
-            background-color: rgb(0, 199, 156);
-            font-size: 15px;
-            color: white;
-            &:hover{
-              color: black;
-              @include transition;
-            }
-          }
-        }
-      }
-    }
-    @media screen and(max-width:920px) {
-      flex-direction: column;
-    }
-
-  }
-
-//fine contenitore-piatti
-
-.prezzo-totale{
-    text-align: center;
-    font-weight: bold;
-  }
-  
-  
+// sezione carte prima section
   #carte{
     width: 80%;
     background-color:#e1f8f3;
@@ -268,7 +107,122 @@ body{
       }
     }
   }
-  
+
+  // fine 1 section 
+  // inzio section carrello con piatti
+.single-item {
+  display: inline-block;
+  vertical-align: middle;
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgb(247, 241, 241);
+  position: relative;
+  transition-duration: 0.3s;
+  transition-property: transform;
+  cursor: pointer;
+}
+.single-item:before {
+  pointer-events: none;
+  position: absolute;
+  z-index: -1;
+  content: '';
+  top: 100%;
+  left: 5%;
+  height: 10px;
+  width: 90%;
+  opacity: 0;
+   background: radial-gradient(ellipse at center, rgba(248, 248, 248, 0.35) 0%, rgba(247, 244, 244, 0) 80%);
+   transition-duration: 0.3s;
+  transition-property: transform, opacity;
+}
+.single-item:hover, .single-item:focus, .single-item:active {
+    transform: translateY(-5px);
+  /* move the element up by 5px */
+}
+.single-item:hover:before, .single-item:focus:before, .single-item:active:before {
+  opacity: 1;
+  transform: translateY(5px);
+  /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
+}
+.img-container{
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  img{
+    width: 100%;
+  }
+}
+
+/* Grow Shadow */
+.img-container{
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+}
+.img-container:hover, .product-img:focus, .product-img:active {
+   box-shadow: 1px 0px 1px 4px rgba(247, 243, 243, 0.932);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.card-body{
+
+  .contenitore-btn-aggiungi{
+    display:flex;
+    justify-content:center;
+    padding:10px;
+    .btn-aggiungi{
+      width:100px;
+      padding:5px;
+      border-radius:15px;
+      background-color: rgb(0, 199, 156);
+      font-size: 15px;
+      color: white;
+      &:hover{
+        color: black;
+        @include transition;
+      }
+    }
+  }
+    .card-text{
+    text-align:center;
+    font-size:15px;
+    text-transform:capitalize;
+    ul{
+      text-decoration: none;
+    }
+    h5{
+      font-size:25px;
+      text-align:center;
+      font-weight: 400;
+      text-transform:capitalize;
+      @media screen and (max-width: 768px){
+        font-size: 20px;
+      }
+    }
+  } 
+}
+// fine section piatti
+
+.prezzo-totale{
+  text-align: center;
+  font-weight: bold;
+}
+
+.text-ordina{
+  padding: 30px 0 15px;
+  text-align:justify;
+  margin-left:15px;
+  font-weight: 600;
+  font-size: 45px;
+  color: #000;
+}
+
   // Sezione sec
   #about-sec{
     margin-top: 25px;
